--- a/my-react-app/src/components/Footer.css
+++ b/my-react-app/src/components/Footer.css
@@ -95,7 +95,7 @@
   justify-content: center;
   text-align: center;
   pointer-events: none;
-  mix-blend-mode:difference;
+  -webkit-text-stroke: 2px #FF8F00;
   z-index: 10;
 }
 
@@ -244,3 +244,4 @@
 .d112 ul li:nth-child(4) a:before {
   background: #dd4b39;
 }
+
