--- a/my-react-app/src/index.css
+++ b/my-react-app/src/index.css
@@ -2,9 +2,19 @@
 @import 'tailwindcss';
 
 @theme {
+  /* ===== Fonts ===== */
   --font-roboto: Roboto, sans-serif;
   --font-poppins: Poppins, sans-serif;
-  
+
+  /* ===== Breakpoints ===== */
+  --breakpoint-xs: 360px;  /* small phones */
+  --breakpoint-ip:390px;
+  --breakpoint-sm: 410px;  /* custom small breakpoint */
+  --breakpoint-md: 765px;
+  --breakpoint-lg: 1024px;
+  --breakpoint-xl: 1280px;
+  --breakpoint-2xl: 1536px;
+
   
   
   /* Heading ka text */
