--- a/my-react-app/src/index.css
+++ b/my-react-app/src/index.css
@@ -5,7 +5,8 @@
   /* ===== Fonts ===== */
   --font-roboto: Roboto, sans-serif;
   --font-poppins: Poppins, sans-serif;
-
+  --breakpoint-sr:390px;
+  --breakpoint-ip:912px;
  
 
 
